<resources>
    <string name="app_name">Earthquakes</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="location_required">Unable to locate you without permission</string>
    <string name="my_location">My location</string>
    <string name="earthquake">earthquake</string>
    <string name="earthquake_details">Earthquake details</string>
    <string name="magnitude">Magnitude</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="field">Field</string>
    <string name="longitude">Longitude</string>
    <string name="region">Region</string>
    <string name="depth">Depth</string>
    <string name="latitude">Latitude</string>
    <string name="more_details">More details</string>
    <string name="sort_by_magnitude">Sort by magnitude</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_date_ascending">Sort by date ascending</string>
    <string name="sort_by_date_descending">Sort by date descending</string>
    <string name="sort_by_magnitude_descending">Sort by magnitude descending</string>
    <string name="sort_by_magnitude_ascending">Sort by magnitude ascending</string>
</resources>