<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="earthquake"
            type="it.danieleborgna.earthquakes.model.Earthquake" />
    </data>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/littleMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/littleMap">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/earthquake_details"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="?android:attr/listDivider"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:showDividers="middle|beginning|end|none"
                    android:stretchColumns="1">

                    <TableRow
                        android:id="@+id/headerRow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="5dp">

                        <TextView
                            android:id="@+id/headerField"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/field"
                            android:textSize="28sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/headerValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/value"
                            android:textSize="28sp"
                            android:textStyle="bold|italic" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/dateRow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="3dp">

                        <TextView
                            android:id="@+id/dateField"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/dateValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{earthquake.getDateToString()}"
                            android:textSize="20sp"
                            tools:text="Date value" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/magnitudeRow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="3dp">

                        <TextView
                            android:id="@+id/magnitudeField"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/magnitude"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/magnitudeValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@{earthquake.magnitudeToString + ' ' + earthquake.magnitudeType}"

                            tools:text="Magnitude value" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/latitudeRow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="3dp">

                        <TextView
                            android:id="@+id/latitudeField"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/latitude"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/latitudeValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@{Double.toString(earthquake.latitude)}"
                            tools:text="Latitude value" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/longitudeRow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="3dp">

                        <TextView
                            android:id="@+id/longitudeFIeld"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/longitude"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/longitudeValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@{Double.toString(earthquake.longitude)}"
                            tools:text="Longitude value" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/depthRow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="3dp">

                        <TextView
                            android:id="@+id/depthField"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/depth"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/depthValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@{earthquake.getDepthToString()}"
                            tools:text="Depth value" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/regionRow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="3dp">

                        <TextView
                            android:id="@+id/regionField"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/region"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/regionValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@{earthquake.region}"
                            tools:text="Region value" />
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/moreDetailsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_details" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
